<resources>
    <string name="app_name">Calculator App</string>
    <string name="calculatorScreen">0</string>

    <!--    First row on Screen-->
    <string name="clear">C</string>
    <string name="plus_minus">+/-</string>
    <string name="percent">%</string>
    <string name="division">÷</string>

    <!--    Second row on Screen-->
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="multiplication">x</string>

    <!--    Third row on screen-->
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="minus">-</string>

    <!--    Fourth row on screen-->
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="plus">+</string>

    <!--    Fifth row on screen-->
    <string name="number_0">0</string>
    <string name="dot">.</string>
    <string name="result">=</string>
</resources>
