<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111111">


    <TextView
        android:id="@+id/screen"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="bottom|right"
        android:text="@string/screen"
        android:textColor="@color/numbers_color"
        android:textSize="65sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/all_clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/gray_button"
        android:onClick="onClickClear"
        android:text="@string/all_clear"
        android:textColor="@color/signs_color"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/number_7"
        app:layout_constraintEnd_toStartOf="@+id/clear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screen" />

    <Button
        android:id="@+id/clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/gray_button"
        android:onClick="onClickClear"
        android:text="@string/clear"
        android:textColor='@color/signs_color'
        android:textSize="@dimen/regular"
        app:layout_constraintBottom_toTopOf="@+id/number_8"
        app:layout_constraintEnd_toStartOf="@+id/percent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/all_clear"
        app:layout_constraintTop_toBottomOf="@+id/screen" />

    <Button
        android:id="@+id/percent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/gray_button"
        android:onClick="onClickOperator"
        android:text="@string/percent"
        android:textColor='@color/signs_color'
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/number_9"
        app:layout_constraintEnd_toStartOf="@+id/division"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintTop_toBottomOf="@+id/screen" />


    <Button
        android:id="@+id/division"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/gray_button"
        android:onClick="onClickOperator"
        android:text="@string/division"
        android:textColor='@color/signs_color'
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/multiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/percent"
        app:layout_constraintTop_toBottomOf="@+id/screen" />

    <Button
        android:id="@+id/number_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/black_button"
        android:onClick="onClickNumber"
        android:text="@string/number_7"
        android:textColor='@color/numbers_color'
        android:textSize="@dimen/regular"
        app:layout_constraintBottom_toTopOf="@+id/number_4"
        app:layout_constraintEnd_toStartOf="@+id/number_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/all_clear" />

    <Button
        android:id="@+id/number_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/black_button"
        android:onClick="onClickNumber"
        android:text="@string/number_8"
        android:textColor='@color/numbers_color'
        android:textSize="@dimen/regular"
        app:layout_constraintBottom_toTopOf="@+id/number_5"
        app:layout_constraintEnd_toStartOf="@+id/number_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_7"
        app:layout_constraintTop_toBottomOf="@+id/clear" />


    <Button
        android:id="@+id/number_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/black_button"
        android:onClick="onClickNumber"
        android:text="@string/number_9"
        android:textColor='@color/numbers_color'
        android:textSize="@dimen/regular"
        app:layout_constraintBottom_toTopOf="@+id/number_6"
        app:layout_constraintEnd_toStartOf="@+id/multiplication"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_8"
        app:layout_constraintTop_toBottomOf="@+id/percent" />

    <Button
        android:id="@+id/multiplication"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/gray_button"
        android:onClick="onClickOperator"
        android:text="@string/multiplication"
        android:textColor='@color/signs_color'
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_9"
        app:layout_constraintTop_toBottomOf="@+id/division" />

    <Button
        android:id="@+id/number_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/black_button"
        android:onClick="onClickNumber"
        android:text="@string/number_4"
        android:textColor='@color/numbers_color'
        android:textSize="@dimen/regular"
        app:layout_constraintBottom_toTopOf="@+id/number_1"
        app:layout_constraintEnd_toStartOf="@+id/number_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_7" />

    <Button
        android:id="@+id/number_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/black_button"
        android:onClick="onClickNumber"
        android:text="@string/number_5"
        android:textColor='@color/numbers_color'
        android:textSize="@dimen/regular"
        app:layout_constraintBottom_toTopOf="@+id/number_2"
        app:layout_constraintEnd_toStartOf="@+id/number_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_4"
        app:layout_constraintTop_toBottomOf="@+id/number_8" />

    <Button
        android:id="@+id/number_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/black_button"
        android:onClick="onClickNumber"
        android:text="@string/number_6"
        android:textColor='@color/numbers_color'
        android:textSize="@dimen/regular"
        app:layout_constraintBottom_toTopOf="@+id/number_3"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_5"
        app:layout_constraintTop_toBottomOf="@+id/number_9" />

    <Button
        android:id="@+id/minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/gray_button"
        android:onClick="onClickOperator"
        android:text="@string/minus"
        android:textColor='@color/signs_color'
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_6"
        app:layout_constraintTop_toBottomOf="@+id/multiplication" />

    <Button
        android:id="@+id/number_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/black_button"
        android:onClick="onClickNumber"
        android:text="@string/number_1"
        android:textColor='@color/numbers_color'
        android:textSize="@dimen/regular"
        app:layout_constraintBottom_toTopOf="@+id/plus_minus"
        app:layout_constraintEnd_toStartOf="@+id/number_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_4" />

    <Button
        android:id="@+id/number_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/black_button"
        android:onClick="onClickNumber"
        android:text="@string/number_2"
        android:textColor='@color/numbers_color'
        android:textSize="@dimen/regular"
        app:layout_constraintBottom_toTopOf="@+id/number_0"
        app:layout_constraintEnd_toStartOf="@+id/number_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_1"
        app:layout_constraintTop_toBottomOf="@+id/number_5" />

    <Button
        android:id="@+id/number_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/black_button"
        android:onClick="onClickNumber"
        android:text="@string/number_3"
        android:textColor='@color/numbers_color'
        android:textSize="@dimen/regular"
        app:layout_constraintBottom_toTopOf="@+id/dot"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_2"
        app:layout_constraintTop_toBottomOf="@+id/number_6" />

    <Button
        android:id="@+id/plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/gray_button"
        android:onClick="onClickOperator"
        android:text="@string/plus"
        android:textColor='@color/signs_color'
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_3"
        app:layout_constraintTop_toBottomOf="@+id/minus" />

    <Button
        android:id="@+id/plus_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/gray_button"
        android:text="@string/plus_minus"
        android:textColor='@color/signs_color'
        android:textSize="@dimen/regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/number_0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_1" />

    <Button
        android:id="@+id/number_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/black_button"
        android:onClick="onClickNumber"
        android:text="@string/number_0"
        android:textColor='@color/numbers_color'
        android:textSize="@dimen/regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plus_minus"
        app:layout_constraintTop_toBottomOf="@+id/number_2" />

    <Button
        android:id="@+id/dot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/black_button"
        android:onClick="onClickNumber"
        android:text="@string/dot"
        android:textColor='@color/numbers_color'
        android:textSize="@dimen/regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_0"
        app:layout_constraintTop_toBottomOf="@+id/number_3" />

    <Button
        android:id="@+id/equals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/orange"
        android:onClick="onClickEquals"
        android:text="@string/equals"
        android:textColor='@color/numbers_color'
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dot"
        app:layout_constraintTop_toBottomOf="@+id/plus" />


</androidx.constraintlayout.widget.ConstraintLayout>